# matus.benjamin-saavedra.diego-garcia.abraham-monteverde.juan-Tarea3.2025.1

./: .gitignore  CMakeLists.txt  Info.plist  Makefile  README.md  simulador.pro  test_interpolacion.txt
includes/: Broker.h  Component.h  Follower.h  GPSCarFollower.h  GPSCarPublisher.h  GPSMovementView.h  Publisher.h  Recorder.h  StartDialog.h  Subscriber.h  VideoFollower.h  VideoPublisher.h
src/: Broker.cpp  Component.cpp  Follower.cpp  GPSCarFollower.cpp  GPSCarPublisher.cpp  GPSMovementView.cpp  Publisher.cpp  Recorder.cpp  StartDialog.cpp  Subscriber.cpp  VideoFollower.cpp  VideoPublisher.cpp
src/simulador/: StartDialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
